# batched-fwdgrad

./: LICENSE  README.md  pyproject.toml
batched_fwdgrad/: jvp_layers.py  models.py  tests.py  timm_models.py
